--- a/DD/introduction.tex
+++ b/DD/introduction.tex
@@ -21,6 +21,12 @@ PowerEnJoy is a large-scale car-sharing service. It requires to perform excellen
 	\item[REST:] REpresentational State Transfer. It's an architectural style and an approach to stateless communications, used in the development of client-server systems.
 	\item[GUI:] Graphical User Interface.
 	\item[ACID:] Atomicity, Consistency, Isolation, Durability. A set of properties of database transactions.
+	\item[API:] Application Programming Interface.
+	\item[EJB:] Enterprise Java Bean.
+	\item[JPA:] Java Persistence API.
+	\item[JSP:] JavaServer Pages.
+	\item[HTTP:] HyperText Transfer Protocol.
+	\item[HTTPS:] HyperText Transfer Protocol Secure.
 \end{description}
 
 \subsection{Reference Documents}
